--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-virtualized": "^9.22.5",
+    "react-virtuoso": "^4.12.0",
     "unsplash-js": "^7.0.19"
   },
   "devDependencies": {
