--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "blurhash": "^2.0.5",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-blurhash": "^0.3.0",
     "react-dom": "^18.3.1",
     "react-virtuoso": "^4.12.0",
     "unsplash-js": "^7.0.19"
